<resources>
    <string name="app_name">Moeda Digital</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="coin">Criptomoeda</string>
    <string name="name_coin">Nome da Moeda</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_back">Go Back</string>
    <string name="add">Adicionar como favorito</string>
    <string name="last_hour">Última hora</string>
    <string name="last_day">Último dia</string>
    <string name="last_month">Último mês</string>
    <string name="price_coin">Preço da Moeda</string>
    <string name="last_price_hour">Último preço por hora</string>
    <string name="try_again">Erro 404 - Tentar Novamente</string>
    <string name="item_fav">Moeda está como favorita</string>
    <string name="date">4 de março de 2022</string>
    <string name="last_price_day">Último preço por dia</string>
    <string name="last_price_month">Último preço por mês</string>
    <string name="SimboloMoedaFavorita">Símbolo da moeda favorita</string>
    <string name="PrecoMoedaFavorita">Preço moeda favorita</string>
    <string name="NomeAbreviadoMoedaFavorita">Nome abreviado moeda favortia</string>
    <string name="NomeMoedaFavorita">Nome moeda favorita</string>
    <string name="BuscaMoeda">Digite o nome da moeda</string>
    <string name="DescricaoSimbolo">Descrição símbolo da moeda</string>
    <string name="dimenStatusBar">12dp</string>
    <string name="mensagem_de_erro">Mensagem de erro</string>
</resources>