<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg_fragment"
    android:clickable="true"
    android:focusable="true"
    android:orientation="horizontal"
    android:paddingHorizontal="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_coinItem"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:paddingRight="16dp"
        android:scaleType="centerCrop"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/ic_money_24"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:screenReaderFocusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_coinItem"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_coinNameItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            tools:text="@string/name_coin"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_coinSymbolItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            tools:text="@string/DescricaoSimbolo"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_favoriteItem"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_gravity="left|center_vertical"
        android:layout_marginBottom="22dp"
        android:layout_marginLeft="12dp"
        android:contentDescription="@string/item_fav"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
        app:layout_constraintStart_toEndOf="@+id/linearLayout3"
        app:layout_constraintTop_toTopOf="@+id/linearLayout3"
        app:srcCompat="@drawable/ic_star_24"
        app:tint="@color/white"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_coinPriceItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:focusable="false"
        android:gravity="right"
        android:hint="@string/price_coin"
        android:text="@string/price_coin"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>